# python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: recipient_feed_smoke.py
src/postmx/: __init__.py  _client.py  _errors.py  _http.py  _types.py  webhooks.py
tests/: test_client.py  test_http.py  test_webhooks.py
