[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postmx"
version = "0.1.1"
description = "Official PostMX Python SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "postmx", email = "dev@postmx.co" },
]
dependencies = ["httpx>=0.24"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/postmx/python"
Repository = "https://github.com/postmx/python"
Issues = "https://github.com/postmx/python/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.4",
    "twine>=5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/postmx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100
